# cli

./: .gitignore  CLI_AUTH_README.md  COMPOSITION_ID_USAGE.md  Cargo.toml  README.md  apply_generic_patch.py  build.rs  composite.json  generic_types_patch.txt  package-lock.json  package.json  starthub.lock.json  test-auth.md  test-cli-auth.md  test_composition.sh
.github/workflows/: deploy-docs.yml  release.yml
console/: package-lock.json  package.json  tsconfig.app.json
console/src/: App.vue  main.ts
console/src/assets/: main.css
console/src/components/: DataTypeModal.vue  DataTypesSidebar.vue  DiagramComponent.vue  InputsComponent.vue  LogsComponent.vue  Navbar.vue  SchemaEditorModal.vue  TreeComponent.vue  VncComponent.vue
console/src/components/__tests__/: InputsComponent.spec.ts
console/src/lib/: supabase.ts
console/src/router/: index.ts
console/src/stores/: dataTypes.ts  search.ts
console/src/views/: ActionNewView.vue  BuilderView.vue  FormView.vue  HomeView.vue  MyActionsView.vue  RunView.vue  SearchView.vue
docs/: atomic.md  cli-architecture.md  composite.md  composition.md  dag.md  docusaurus.config.ts  format.md  git.md  io-definition.md  package-lock.json  runner.md  type-cheking.md  use-cases.md  wasm-vs-docker.md
docs/docs/: intro.md
docs/docs/_publishing-an-action/: _category_.json  index.md
docs/docs/tutorial-basics/: environment-setup.md  installation.md  lock-file.md  overview.md
docs/docs/tutorial-extras/: _category_.json  help.md  init.md  login.md  logs.md  publish.md  reset.md  start.md  status.md  stop.md
docs/src/components/HomepageFeatures/: index.tsx
docs/src/pages/: index.tsx
scripts/: sync-cargo-version.js
server/: Cargo.toml  README.md  test_regex.rs  test_url.rs
server/src/: database.rs  docker.rs  execution.rs  execution_generated.rs  lib.rs  logger.rs  main.rs  models.rs  wasm.rs
src/: commands.rs  commands.rs.backup  commands_clean.rs  commands_generic_types_patch.rs  commands_old.rs  commands_simple_generic_fix.rs  commands_updated.rs  config.rs  ghapp.rs  main.rs  models.rs  publish.rs  starthub_api.rs  templates.rs
src/runners/: github.rs  local.rs  mod.rs  models.rs
test-init-simple/: Dockerfile
