[workspace]
members = [
    ".",
    "server"
]

[package]
name = "starthub"
version = "0.2.26"
edition = "2021"

[[bin]]
name = "starthub"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
inquire = "0.7"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
which = "6"
sodiumoxide = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
webbrowser = "0.8"
url = "2.4"
zip = "0.6"
rust-embed = "8"
mime_guess = "2"
tempfile = "3"
tokio = { version = "1", features = ["macros","rt-multi-thread","process","fs","time","signal"] }
lazy_static = "1.4"
aws-config = "1.8.6"
aws-sdk-s3 = "1.91.0"
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
serde_json = "1"
