[package]
name = "starthub-server"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "starthub-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "time", "signal"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.4"
zip = "0.6"
wasmtime = "22.0"
wasmtime-wasi = "22.0"
tempfile = "3"
rust-embed = "8"
mime_guess = "2"
lazy_static = "1.4"
aws-config = "1.8.6"
aws-sdk-s3 = "1.91.0"
